--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -2,14 +2,26 @@ name: Build and Push Docker Image
 
 on:
   push:
-    branches: [ "main" ]  # при пуше в main
+    branches: [ "main" ]
   pull_request:
-    branches: [ "main" ]  # при создании PR
+    branches: [ "main" ]
 
 jobs:
+  lint:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+      
+      - name: Lint Dockerfile with hadolint
+        uses: hadolint/hadolint-action@v3.1.0
+        with:
+          dockerfile: Dockerfile
+          failure-threshold: warning
+
   build:
     runs-on: ubuntu-latest
-    
+    needs: lint  # зависит от успешного линтинга
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
@@ -20,7 +32,10 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_TOKEN }}
       
-      - name: Build and push Docker image
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+      
+      - name: Build and push
         uses: docker/build-push-action@v4
         with:
           context: .
@@ -28,3 +43,17 @@ jobs:
           tags: |
             ${{ secrets.DOCKER_USERNAME }}/best-practice-demo:latest
             ${{ secrets.DOCKER_USERNAME }}/best-practice-demo:${{ github.sha }}
+          cache-from: type=registry,ref=${{ secrets.DOCKER_USERNAME }}/best-practice-demo:buildcache
+          cache-to: type=registry,ref=${{ secrets.DOCKER_USERNAME }}/best-practice-demo:buildcache,mode=max
+
+deploy:
+  runs-on: self-hosted
+  needs: build
+  if: github.ref == 'refs/heads/main'
+  steps:
+    - name: Deploy application
+      run: |
+        cd /opt/best-practice-demo
+        docker compose pull
+        docker compose up -d
+        docker image prune -f
