--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -1,57 +1,29 @@
-name: Build and Push Docker Image
+---
+name: Build and Deploy
 
 on:
   push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
+    branches: ["main"]
 
 jobs:
-  lint:
-    runs-on: ubuntu-latest
+  build-and-deploy:
+    runs-on: self-hosted
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
-      
-      - name: Lint Dockerfile with hadolint
-        uses: hadolint/hadolint-action@v3.1.0
-        with:
-          dockerfile: Dockerfile
-          failure-threshold: warning
 
-  build:
-    runs-on: ubuntu-latest
-    needs: lint  # зависит от успешного линтинга
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-      
       - name: Login to Docker Hub
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_TOKEN }}
-      
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
-      
-      - name: Build and push
-        uses: docker/build-push-action@v4
-        with:
-          context: .
-          push: true
-          tags: |
-            ${{ secrets.DOCKER_USERNAME }}/best-practice-demo:latest
-            ${{ secrets.DOCKER_USERNAME }}/best-practice-demo:${{ github.sha }}
-          cache-from: type=registry,ref=${{ secrets.DOCKER_USERNAME }}/best-practice-demo:buildcache
-          cache-to: type=registry,ref=${{ secrets.DOCKER_USERNAME }}/best-practice-demo:buildcache,mode=max
 
-  deploy:
-    runs-on: self-hosted
-    needs: build
-    if: github.ref == 'refs/heads/main'
-    steps:
-      - name: Deploy application
+      - name: Build and push Docker image
+        run: |
+          docker build -t ${{ secrets.DOCKER_USERNAME }}/best-practice-demo:latest .
+          docker push ${{ secrets.DOCKER_USERNAME }}/best-practice-demo:latest
+
+      - name: Deploy on server
         run: |
           cd /opt/best-practice-demo
           docker compose pull
