--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -20,7 +20,9 @@ jobs:
 
       - name: Build and push Docker image
         run: |
-          docker build -t ${{ secrets.DOCKER_USERNAME }}/best-practice-demo:latest .
+          docker build \
+            -t ${{ secrets.DOCKER_USERNAME }}/best-practice-demo:latest \
+              .
           docker push ${{ secrets.DOCKER_USERNAME }}/best-practice-demo:latest
 
       - name: Deploy on server
